.provarCaches/00D5f000005vwGkEAI/objects/rstkf__Financial_Reporting_Segments__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>rstkf__AEL_rel_path__c</fullName>
        <label>Accounting Entry Line rel path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Budget_Line_rel_path__c</fullName>
        <label>Budget Line rel path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Hierarchy_Name__c</fullName>
        <label>Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Reporting Segments</label>
</CustomObject>